--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body {
     margin-left: var(--menu-btn-size);
     /* background: url(/bg.jpg) no-repeat center center / 110vh, #000000e9; */
     background: linear-gradient(-50deg, transparent, #fff1),
-        url(/bg.jpg) no-repeat center center / 110vh, #000000e9;
+        url(/img/bg.jpg) no-repeat center center / 110vh, #000000e9;
     color: var(--color-white);
 }
 
@@ -54,8 +54,7 @@ a {
     flex-direction: column;
     justify-content: space-between;
     z-index: 1;
-    transition: width 0.2s;
-    backdrop-filter: blur(5px);
+    transition: width 0.2s, background-color 0.3s;
 }
 
 .menu__btn {
@@ -104,7 +103,19 @@ a {
 }
 #menubtn:checked ~ .menu {
     width: 30rem;
+    background-color: #000d;
 }
+
+/* prettier-ignore */
+@supports ((-webkit-backdrop-filter: blur(5px)) or (backdrop-filter: blur(5px))) {
+   .menu {
+     backdrop-filter: blur(5px);
+   }
+
+   #menubtn:checked ~ .menu {
+    background-color: #0005;
+}
+ }
 
 .menu__social {
     display: flex;
@@ -630,4 +641,45 @@ a {
     .hero__bar {
         width: 20rem;
     }
+
+    .events__container {
+        overflow: hidden;
+    }
+    .events__event {
+        width: 100%;
+        flex: none;
+    }
+}
+
+/* 800px */
+@media only screen and (max-width: 50em) {
+    .nav {
+        margin-left: -10rem;
+    }
+
+    .hero__title {
+        font-size: 6.4rem;
+        margin-bottom: 2rem;
+        line-height: 7rem;
+    }
+    .hero__details {
+        width: 100%;
+        line-height: 2.7rem;
+    }
+    .news {
+        margin-left: -5rem;
+    }
+
+    .news__img {
+        height: 80%;
+        align-self: center;
+    }
+    .news__details {
+        line-height: 2.5rem;
+    }
+}
+
+/* 624px */
+@media only screen and (max-width: 39em) {
+    
 }
