--- a/css/style.css
+++ b/css/style.css
@@ -116,16 +116,17 @@ a {
     background-color: #000d;
 }
 
-/* prettier-ignore */
-@supports ((-webkit-backdrop-filter: blur(5px)) or (backdrop-filter: blur(5px))) {
-   .menu {
-     backdrop-filter: blur(5px);
-   }
+@supports (
+    (-webkit-backdrop-filter: blur(5px)) or (backdrop-filter: blur(5px))
+) {
+    .menu {
+        backdrop-filter: blur(5px);
+    }
 
-   #menubtn:checked ~ .menu {
-    background-color: #0005;
+    #menubtn:checked ~ .menu {
+        background-color: #0005;
+    }
 }
- }
 
 .menu__social {
     display: flex;
@@ -712,10 +713,18 @@ a {
 
     #menubtn:checked ~ .menu {
         width: 100%;
-        backdrop-filter: blur(5px);
         border-bottom: 1px solid #fff2;
         border-left: none;
-        background-color: #0009;
+        background-color: #000e;
+    }
+
+    @supports (
+        (-webkit-backdrop-filter: blur(5px)) or (backdrop-filter: blur(5px))
+    ) {
+        #menubtn:checked ~ .menu {
+            backdrop-filter: blur(5px);
+            background-color: #0009;
+        }
     }
 
     .menu__btn {
@@ -744,7 +753,7 @@ a {
         align-self: center;
         justify-self: center;
         margin: 0;
-        width: 100vw;
+        width: 100%;
         text-align: center;
         max-height: 0;
         transition: max-height 0.4s linear, opacity 0.4s;
@@ -773,11 +782,19 @@ a {
     #menubtn:checked ~ .nav {
         opacity: 1;
         visibility: visible;
-        backdrop-filter: blur(5px);
         border-bottom: 1px solid #fff2;
-        background-color: #0005;
+        background-color: #000c;
         max-height: 100%;
         z-index: 1;
+    }
+
+    @supports (
+        (-webkit-backdrop-filter: blur(5px)) or (backdrop-filter: blur(5px))
+    ) {
+        #menubtn:checked ~ .nav {
+            backdrop-filter: blur(5px);
+            background-color: #0005;
+        }
     }
 
     .hero-list {
