--- a/css/style.css
+++ b/css/style.css
@@ -783,7 +783,7 @@ a {
         opacity: 1;
         visibility: visible;
         border-bottom: 1px solid #fff2;
-        background-color: #000c;
+        background-color: #000e;
         max-height: 100%;
         z-index: 1;
     }
