--- a/css/style.css
+++ b/css/style.css
@@ -734,6 +734,8 @@ a {
         flex-direction: row;
         margin-bottom: 0;
         align-items: center;
+        opacity: 0;
+        visibility: hidden;
     }
     .menu__social .menu__slink {
         transform: rotateZ(0deg);
@@ -795,6 +797,11 @@ a {
             backdrop-filter: blur(5px);
             background-color: #0005;
         }
+    }
+
+    #menubtn:checked ~ .menu .menu__social {
+        opacity: 1;
+        visibility: visible;
     }
 
     .hero-list {
